[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Garbage/TimedNode.gd" type="Script" id=2]
[ext_resource path="res://Timeline/TimelineInterface.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0207

[node name="TimedNode" type="RigidBody2D" groups=[
"timed",
]]
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TimelineInterface" type="Node" parent="."]
script = ExtResource( 3 )
[connection signal="apply_frame" from="TimelineInterface" to="." method="_on_TimelineInterface_apply_frame"]
[connection signal="get_frame" from="TimelineInterface" to="." method="_on_TimelineInterface_get_frame"]
[connection signal="playing_changed" from="TimelineInterface" to="." method="_on_TimelineInterface_playing_changed"]
